1164: Fix buttons not showing

--- a/assets/src/sass/blocks/_carousel.scss
+++ b/assets/src/sass/blocks/_carousel.scss
@@ -109,7 +109,6 @@
 		z-index: 1;
 
 		button {
-			display: none;
 			background-color: var(--wp--preset--color--base);
 			border: 1px solid var(--wp--preset--color--base);
 			border-radius: 50%;
